EIT-3459 | delete get issuer list from issuers